<ScrollView android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/smallText"
    android:paddingLeft="@dimen/smallText"
    >
    <LinearLayout
        android:id="@+id/texts"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:paddingTop="@dimen/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item"/>
    <TextView
        android:paddingTop="@dimen/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"/>
    <Spinner
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"/>
    <TextView
        android:layout_marginTop="@dimen/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="decimal"
        android:id="@+id/price"/>
    <TextView
        android:paddingTop="@dimen/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"/>
    <EditText
        android:numeric="decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tax"/>
    <TextView
        android:paddingTop="@dimen/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount"/>
    <EditText
        android:numeric="decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/discount"/>
    <TextView
        android:paddingTop="@dimen/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalPrice"/>
    <EditText
        android:numeric="decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalPrice"/>
    <TextView
        android:paddingTop="@dimen/smallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"/>
    </LinearLayout>

    <TextView
        android:layout_below="@id/texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="@dimen/largeText"
        android:clickable="true"
        android:onClick="onClick"/>

    <Button
        android:layout_below="@id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/middleText"
        android:layout_marginBottom="@dimen/middleText"
        android:text="Confirm"
        android:onClick="onClick"/>

</RelativeLayout>
    </ScrollView>
